fix eclipse warnings in cesecore-ejb-interface